jitfailure-dolfin_expression_606b79a9014856e3a6a2a2afd999068a/error.log
/tmp/tmprq6zdt3q/dolfin_expression_606b79a9014856e3a6a2a2afd999068a.cpp: In member function ‘virtual void dolfin::dolfin_expression_606b79a9014856e3a6a2a2afd999068a::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmprq6zdt3q/dolfin_expression_606b79a9014856e3a6a2a2afd999068a.cpp:61:27: error: expected ‘)’ before ‘;’ token
   61 |           values[0] = (2.0;
      |                           ^
/tmp/tmprq6zdt3q/dolfin_expression_606b79a9014856e3a6a2a2afd999068a.cpp:61:23: note: to match this ‘(’
   61 |           values[0] = (2.0;
      |                       ^
